--- a/Dapper.TinyCrud.SqlServer/Dapper.TinyCrud.SqlServer.csproj
+++ b/Dapper.TinyCrud.SqlServer/Dapper.TinyCrud.SqlServer.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dapper.TinyCrud.Base\Dapper.TinyCrud.Base.csproj" />
+    <ProjectReference Include="..\Dapper.TinyCrud.Base\Dapper.CX.Base.csproj" />
   </ItemGroup>
 
 </Project>
