--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dapper.TinyCrud.Base\Dapper.CX.Base.csproj" />
-    <ProjectReference Include="..\Dapper.TinyCrud.SqlServer\Dapper.TinyCrud.SqlServer.csproj" />
+    <ProjectReference Include="..\Dapper.CX.Base\Dapper.CX.Base.csproj" />
+    <ProjectReference Include="..\Dapper.CX.SqlServer\Dapper.CX.SqlServer.csproj" />
   </ItemGroup>
 
 </Project>
