--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,14 +2,28 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.9.0-alpha</Version>
+    <Authors>Adam O'Neil</Authors>
+    <Company>Adam O'Neil</Company>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Description>SQL Server implementation of Dapper.CX</Description>
+    <Copyright>Copyright (c) Adam O'Neil 2019</Copyright>
+    <PackageTags>dapper crud-library sql-server</PackageTags>
+    <PackageProjectUrl>https://github.com/adamosoftware/Dapper.CX</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/adamosoftware/Dapper.CX</RepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper.CX.Base" Version="0.9.0-alpha" />
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dapper.CX.Base\Dapper.CX.Base.csproj" />
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
