--- a/Dapper.CX.Base/Dapper.CX.Base.csproj
+++ b/Dapper.CX.Base/Dapper.CX.Base.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Dapper.CX</RootNamespace>
-    <Version>1.0.13</Version>
+    <Version>1.0.14</Version>
     <Authors>Adam O'Neil</Authors>
     <Description>Abstract and base classes for a Dapper-based platform-neutral CRUD library</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,11 +12,12 @@
     <PackageTags>dapper crud-library</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Copyright (c) Adam O'Neil 2019</Copyright>
-    <PackageReleaseNotes>simplified IValidate interface</PackageReleaseNotes>
+    <PackageReleaseNotes>simplified IGetRelated</PackageReleaseNotes>
+    <NeutralLanguage />
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AO.DbSchema.Attributes" Version="1.0.5" />
+    <PackageReference Include="AO.DbSchema.Attributes" Version="1.0.6" />
     <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
