--- a/Dapper.CX.ChangeTracking/Dapper.CX.ChangeTracking.csproj
+++ b/Dapper.CX.ChangeTracking/Dapper.CX.ChangeTracking.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AO.ModelSync.Library" Version="2.0.9" />
+    <PackageReference Include="Dapper.CX.SqlServer" Version="1.0.29" />
   </ItemGroup>
 
   <ItemGroup>
