--- a/Dapper.CX.Base/Dapper.CX.Base.csproj
+++ b/Dapper.CX.Base/Dapper.CX.Base.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Dapper.CX</RootNamespace>
-    <Version>1.0.26</Version>
+    <Version>1.0.27</Version>
     <Authors>Adam O'Neil</Authors>
     <Description>Abstract and base classes for a Dapper-based platform-neutral CRUD library</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,7 +12,7 @@
     <PackageTags>dapper crud-library</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Copyright (c) Adam O'Neil 2019</Copyright>
-    <PackageReleaseNotes>fixed issue with enum support</PackageReleaseNotes>
+    <PackageReleaseNotes>added IDbTransaction arg to some Update(Async) overloads</PackageReleaseNotes>
     <NeutralLanguage />
   </PropertyGroup>
 
