package updates, removed [Category] attributes

--- a/Dapper.CX.ChangeTracking/Dapper.CX.ChangeTracking.csproj
+++ b/Dapper.CX.ChangeTracking/Dapper.CX.ChangeTracking.csproj
@@ -15,8 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AO.DbSchema.Attributes" Version="1.0.16" />
-    <PackageReference Include="AO.ModelSync.Library" Version="2.0.9" />
+    <PackageReference Include="AO.Models" Version="1.1.1" />
+    <PackageReference Include="AO.ModelSync.Library" Version="2.0.12" />
     <PackageReference Include="Dapper.CX.Base" Version="1.0.29" />
     <PackageReference Include="Dapper.CX.SqlServer" Version="1.0.31" />
   </ItemGroup>
