--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,21 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.32</Version>
+    <Version>1.1.0</Version>
     <Authors>Adam O'Neil</Authors>
     <Company>Adam O'Neil</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Description>SQL Server implementation of Dapper.CX, a lightweight, feature-rich CRUD library</Description>
-    <Copyright>Copyright (c) Adam O'Neil 2019</Copyright>
+    <Copyright>Copyright (c) Adam O'Neil 2020</Copyright>
     <PackageTags>dapper crud-library sql-server dapper-extensions</PackageTags>
-    <PackageProjectUrl>https://github.com/adamosoftware/Dapper.CX</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/adamosoftware/Dapper.CX</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>minor interface refactoring</PackageReleaseNotes>
+    <PackageReleaseNotes>implemented AO.Models</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper.CX.Base" Version="1.0.29" />
+    <PackageReference Include="Dapper.CX.Base" Version="1.1.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3" />
   </ItemGroup>
 
