--- a/Dapper.CX.ChangeTracking/Dapper.CX.ChangeTracking.csproj
+++ b/Dapper.CX.ChangeTracking/Dapper.CX.ChangeTracking.csproj
@@ -10,15 +10,15 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <RepositoryUrl>https://github.com/adamosoftware/Dapper.CX</RepositoryUrl>
     <PackageProjectUrl>https://github.com/adamosoftware/Dapper.CX/wiki/Using-ChangeTracker</PackageProjectUrl>
-    <Version>1.0.2</Version>
-    <PackageReleaseNotes>some interface refactor</PackageReleaseNotes>
+    <Version>1.0.3</Version>
+    <PackageReleaseNotes>implemented AO.Models</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AO.Models" Version="1.1.3" />
     <PackageReference Include="AO.ModelSync.Library" Version="2.1.0" />
     <PackageReference Include="Dapper.CX.Base" Version="1.1.0" />
-    <PackageReference Include="Dapper.CX.SqlServer" Version="1.0.32" />
+    <PackageReference Include="Dapper.CX.SqlServer" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
