--- a/Dapper.CX.ChangeTracking/Dapper.CX.ChangeTracking.csproj
+++ b/Dapper.CX.ChangeTracking/Dapper.CX.ChangeTracking.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -10,14 +10,14 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX/wiki/Using-ChangeTracker</PackageProjectUrl>
-    <Version>1.0.6</Version>
+    <Version>1.0.7</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AO.Models" Version="1.1.3" />
     <PackageReference Include="AO.ModelSync.Library" Version="2.1.0" />
-    <PackageReference Include="Dapper.CX.Base" Version="1.1.3" />
+    <PackageReference Include="Dapper.CX.Base" Version="1.1.4" />
     <PackageReference Include="Dapper.CX.SqlServer" Version="1.1.2" />
   </ItemGroup>
 
