--- a/Tests.SqlServer/Tests.SqlServer.csproj
+++ b/Tests.SqlServer/Tests.SqlServer.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\Dapper.CX.SqlServer\Abstract\SqlServerCrudProvider.cs" Link="Linked\SqlServerCrudProvider.cs" />
+    <Compile Include="..\Dapper.CX.SqlServer\SqlServerCmd.cs" Link="Linked\SqlServerCmd.cs" />
+    <Compile Include="..\Dapper.CX.SqlServer\SqlServerIntCrudProvider.cs" Link="Linked\SqlServerIntCrudProvider.cs" />
+    <Compile Include="..\Dapper.CX.SqlServer\SqlServerLongCrudProvider.cs" Link="Linked\SqlServerLongCrudProvider.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AO.Models" Version="1.1.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
@@ -15,7 +22,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dapper.CX.SqlServer\Dapper.CX.SqlServer.csproj" />
+    <Folder Include="Linked\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dapper.CX.Base\Dapper.CX.Base.csproj" />
   </ItemGroup>
 
 </Project>
