--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -16,7 +16,28 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper.CX.Base" Version="1.1.10" />
+    <Compile Include="..\Dapper.CX.Base\Abstract\SqlCmdDictionary.cs" Link="Base\Abstract\SqlCmdDictionary.cs" />
+    <Compile Include="..\Dapper.CX.Base\Abstract\SqlCrudProvider.cs" Link="Base\Abstract\SqlCrudProvider.cs" />
+    <Compile Include="..\Dapper.CX.Base\Abstract\SqlCrudProvider_Compatibility.cs" Link="Base\Abstract\SqlCrudProvider_Compatibility.cs" />
+    <Compile Include="..\Dapper.CX.Base\Abstract\SqlCrudProvider_Sync.cs" Link="Base\Abstract\SqlCrudProvider_Sync.cs" />
+    <Compile Include="..\Dapper.CX.Base\Abstract\SqlCrudService.cs" Link="Base\Abstract\SqlCrudService.cs" />
+    <Compile Include="..\Dapper.CX.Base\Classes\ChangeTracker.cs" Link="Base\Classes\ChangeTracker.cs" />
+    <Compile Include="..\Dapper.CX.Base\Classes\SqlExpression.cs" Link="Base\Classes\SqlExpression.cs" />
+    <Compile Include="..\Dapper.CX.Base\Exceptions\ChangeTrackerSaveException.cs" Link="Base\Exceptions\ChangeTrackerSaveException.cs" />
+    <Compile Include="..\Dapper.CX.Base\Exceptions\CrudException.cs" Link="Base\Exceptions\CrudException.cs" />
+    <Compile Include="..\Dapper.CX.Base\Exceptions\IdentityException.cs" Link="Base\Exceptions\IdentityException.cs" />
+    <Compile Include="..\Dapper.CX.Base\Exceptions\PermissionException.cs" Link="Base\Exceptions\PermissionException.cs" />
+    <Compile Include="..\Dapper.CX.Base\Exceptions\TenantIsolationException.cs" Link="Base\Exceptions\TenantIsolationException.cs" />
+    <Compile Include="..\Dapper.CX.Base\Exceptions\TriggerException.cs" Link="Base\Exceptions\TriggerException.cs" />
+    <Compile Include="..\Dapper.CX.Base\Exceptions\ValidationException.cs" Link="Base\Exceptions\ValidationException.cs" />
+    <Compile Include="..\Dapper.CX.Base\Extensions\ConnectionExtensions.cs" Link="Base\Extensions\ConnectionExtensions.cs" />
+    <Compile Include="..\Dapper.CX.Base\Extensions\ModelClassHelper.cs" Link="Base\Extensions\ModelClassHelper.cs" />
+    <Compile Include="..\Dapper.CX.Base\Extensions\ReflectionHelper.cs" Link="Base\Extensions\ReflectionHelper.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AO.Models" Version="1.1.3" />
+    <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3" />
   </ItemGroup>
 
@@ -25,6 +46,13 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Base\Abstract\" />
+    <Folder Include="Base\Classes\" />
+    <Folder Include="Base\Exceptions\" />
+    <Folder Include="Base\Extensions\" />
   </ItemGroup>
 
 </Project>
