--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -36,12 +36,12 @@
     <Folder Include="Base\Classes\" />
     <Folder Include="Base\Exceptions\" />
     <Folder Include="Base\Extensions\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AO.Models" Version="1.1.3" />
     <PackageReference Include="Dapper" Version="2.0.30" />
+    <PackageReference Include="Dapper.QX" Version="1.0.15" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3" />
   </ItemGroup>
 
