--- a/SampleApp.Data/SampleApp.Data.csproj
+++ b/SampleApp.Data/SampleApp.Data.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>SampleApp.Models</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
