--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -10,7 +10,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
-    <Version>1.2.2-beta</Version>
+    <Version>1.2.3-beta</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,6 +21,7 @@
     <Compile Include="..\Dapper.CX.Base\Abstract\SqlCrudService.cs" Link="Base\Abstract\SqlCrudService.cs" />
     <Compile Include="..\Dapper.CX.Base\Classes\ChangeTracker.cs" Link="Base\Classes\ChangeTracker.cs" />
     <Compile Include="..\Dapper.CX.Base\Classes\SqlExpression.cs" Link="Base\Classes\SqlExpression.cs" />
+    <Compile Include="..\Dapper.CX.Base\Classes\SystemUser.cs" Link="Base\Classes\SystemUser.cs" />
     <Compile Include="..\Dapper.CX.Base\Exceptions\ChangeTrackerSaveException.cs" Link="Base\Exceptions\ChangeTrackerSaveException.cs" />
     <Compile Include="..\Dapper.CX.Base\Exceptions\CrudException.cs" Link="Base\Exceptions\CrudException.cs" />
     <Compile Include="..\Dapper.CX.Base\Exceptions\IdentityException.cs" Link="Base\Exceptions\IdentityException.cs" />
@@ -54,7 +55,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AO.Models" Version="1.1.3" />
+    <PackageReference Include="AO.Models" Version="1.1.4" />
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Dapper.QX" Version="1.0.17" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
