--- a/Tests.ChangeTracking/Tests.ChangeTracking.csproj
+++ b/Tests.ChangeTracking/Tests.ChangeTracking.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AO.ModelSync.Library" Version="2.2.3" />
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
@@ -28,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dapper.CX.ChangeTracking\Dapper.CX.ChangeTracking.csproj" />
+    <ProjectReference Include="..\Dapper.CX.SqlServer\Dapper.CX.SqlServer.csproj" />
   </ItemGroup>
 
 </Project>
