--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -10,8 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
-    <Version>1.3.1</Version>
-    <PackageReleaseNotes>fixed CX.SqlServer package dependency, moved out of beta</PackageReleaseNotes>
+    <Version>1.3.2</Version>
+    <PackageReleaseNotes>added ColumnHistories query</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
