SqlServer v1.3.29 DbDictionary int Id added

--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.28</Version>
+    <Version>1.3.29</Version>
     <Authors>Adam O'Neil</Authors>
     <Company>Adam O'Neil</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,8 +12,8 @@
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>more comprehensive DbDictionary initialization</PackageReleaseNotes>
-    <AssemblyVersion>1.3.27.0</AssemblyVersion>
+    <PackageReleaseNotes>DbDictionary int Id added</PackageReleaseNotes>
+    <AssemblyVersion>1.3.29.0</AssemblyVersion>
     <FileVersion>1.3.27.0</FileVersion>
   </PropertyGroup>
 
